--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
     -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
